--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -20,6 +20,7 @@ tasks:
   default:
     desc: Run wasmserve on the current version
     cmds:
+      - echo http://localhost:8080
       - wasmserve .
 
   update:
