--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -28,3 +28,9 @@ tasks:
     deps: [build]
     cmds:
       - curl http://localhost:8080/_notify
+
+  run:
+    desc: Run (non-wasm)
+    deps: [build]
+    cmds:
+      - ./gogame
